Refactor schema AST, type resolution