@@ -4,21 +4,20 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
-import uq.pac.rsvp.policy.ast.schema.attribute.AttributeType;
 import uq.pac.rsvp.policy.ast.visitor.SchemaComputationVisitor;
 import uq.pac.rsvp.policy.ast.visitor.SchemaVisitor;
 
 public class Namespace implements SchemaFileEntry {
 
-    private final Map<String, EntityType> entityTypes;
-    private final Map<String, Action> actions;
-    private final Map<String, AttributeType> commonTypes;
+    private final Map<String, EntityTypeDefinition> entityTypes;
+    private final Map<String, ActionDefinition> actions;
+    private final Map<String, CommonTypeDefinition> commonTypes;
 
     // The key for this namespace within the Schema
     private String name;
 
-    public Namespace(Map<String, EntityType> entityTypes, Map<String, Action> actions,
-            Map<String, AttributeType> commonTypes) {
+    public Namespace(Map<String, EntityTypeDefinition> entityTypes, Map<String, ActionDefinition> actions,
+            Map<String, CommonTypeDefinition> commonTypes) {
         this.entityTypes = entityTypes != null ? Map.copyOf(entityTypes) : Collections.emptyMap();
         this.actions = actions != null ? Map.copyOf(actions) : Collections.emptyMap();
         this.commonTypes = commonTypes != null ? Map.copyOf(commonTypes) : Collections.emptyMap();
@@ -36,7 +35,7 @@ public class Namespace implements SchemaFileEntry {
         return entityTypes != null ? entityTypes.keySet() : Collections.emptySet();
     }
 
-    public EntityType getEntityType(String name) {
+    public EntityTypeDefinition getEntityType(String name) {
         return entityTypes != null ? entityTypes.get(name) : null;
     }
 
@@ -44,16 +43,20 @@ public class Namespace implements SchemaFileEntry {
         return actions != null ? actions.keySet() : Collections.emptySet();
     }
 
-    public Action getAction(String name) {
+    public ActionDefinition getAction(String name) {
         return actions != null ? actions.get(name) : null;
     }
 
     public Set<String> commonTypeNames() {
-        return commonTypes != null ? commonTypes.keySet() : Collections.emptySet();
+        return commonTypes != null ? Set.copyOf(commonTypes.keySet()) : Collections.emptySet();
     }
 
-    public AttributeType getCommonType(String name) {
+    public CommonTypeDefinition getCommonType(String name) {
         return commonTypes != null ? commonTypes.get(name) : null;
+    }
+
+    public CommonTypeDefinition resolveCommonType(String name, CommonTypeDefinition definition) {
+        return commonTypes != null ? commonTypes.put(name, definition) : null;
     }
 
     @Override
